<resources>
    <string name="app_name">Hello</string>
    <string name="tab_text_1">Profile</string>
    <string name="tab_text_2">Matches</string>
    <string name="tab_text_3">Settings</string>

    <string name="matches">Matches</string>
    <string name="settings">Settings</string>

    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="enter_your_description">Enter Your Description</string>
    <string name="enter_occupation">Enter Occupation</string>
    <string name="my_image_desc">Your Picture</string>
    <string name="profile">Profile</string>
    <string name="register">Aloha Dating Registration</string>
    <string name="open_activity_2">Submit</string>




</resources>
