<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Fragment1">

<EditText
    android:id="@+id/editText1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_full_name"
    android:inputType="text"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:autofillHints="yes" />

<EditText
    android:id="@+id/editText2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/enter_age"
    android:inputType="number"
    android:layout_below="@id/editText1"
    android:autofillHints="yes" />

<EditText
    android:id="@+id/editText3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/enter_your_description"
    android:inputType="text"
    android:lines="4"
    android:layout_below="@id/editText2"
    android:autofillHints="yes" />

<EditText
    android:id="@+id/editText4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:hint="@string/enter_occupation"
    android:inputType="text"
    android:lines="2"
    android:layout_below="@id/editText3"
    android:autofillHints="yes" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/editText4"
    android:layout_gravity="center"
    android:layout_marginTop="2dp"
    android:contentDescription="@string/my_image_desc"
    android:src="@drawable/my_image" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/imageView"
    android:layout_marginTop="1dp"
    android:text="@string/profile"
    android:textSize="30sp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:text="@string/register" />


</RelativeLayout>
